# meeting_minutes_automator

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  burnin.err  package-lock.json  package.json
.cargo/: config.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/.claude/: settings.local.json
src-tauri/scripts/: long_running_monitor.py  security_audit.sh
src-tauri/src/: audio.rs  audio_device_adapter.rs  audio_device_recorder.rs  commands.rs  input_mixer.rs  ipc_protocol.rs  lib.rs  logger.rs  main.rs  multi_input_manager.rs  multi_input_settings.rs  python_sidecar.rs  reconnection_manager.rs  resampler.rs  ring_buffer.rs  sidecar.rs  state.rs  storage.rs  websocket.rs
src-tauri/tests/: README.md  device_disconnect_e2e.rs  dynamic_model_downgrade_e2e.rs  e2e_test.rs  integration_tests.rs  ipc_migration_test.rs  multi_input_integration_test.rs  sidecar_full_duplex_e2e.rs  stt_e2e_test.rs  unit_tests.rs  websocket_message_extension_test.rs
src-tauri/tests/fixtures/: generate_test_audio.py  mod.rs
src-tauri/tests/helpers/: mod.rs
src-tauri/tests/integration/: audio_ipc_integration.rs  mod.rs  websocket_integration.rs
src-tauri/tests/support/: legacy_ipc.rs  mod.rs
src-tauri/tests/unit/: mod.rs
src-tauri/tests/unit/audio/: mod.rs  test_device_adapter.rs  test_fake_device.rs
src-tauri/tests/unit/sidecar/: mod.rs  test_ipc.rs  test_python_detection.rs  test_shutdown.rs  test_sidecar_manager.rs
src-tauri/tests/unit/websocket/: mod.rs  test_origin_verification.rs  test_websocket_server.rs
(+315 files in other folders)
