[package]
name = "meeting-minutes-automator"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meeting_minutes_automator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "stt_burn_in"
path = "src/bin/stt_burn_in.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
anyhow = "1"
thiserror = "1"
which = "6.0"
uuid = { version = "1.18.1", features = ["v4"] }
futures-util = "0.3.31"
http = "1.3.1"
bytes = "1"
base64 = "0.22"
tracing = "0.1"

# Audio device management (MVP1 - Real STT)
# Cross-platform audio input/output for macOS, Windows, Linux
# Using 0.13.5 to avoid coreaudio-sys 0.2.17 edition2024 issue
cpal = "0.13.5"
sys-info = "0.9.1"
fs2 = "0.4.3"
ringbuf = "0.4" # ADR-013: SPSC Ring Buffer

[dev-dependencies]
tempfile = "3"
